# mwiki

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  Internationalization_i18n_and_Localization_i10n_concepts.html  LaTeX_Reference_Card.html  Linux_SysRq_Key_and_OOM_System_Recovery.html  Makefile  Math_-_Calculus_Reference_Card.html  Open_Source_Licenses.html  Pipfile  README-Markup-Language.md  README-portuguese.md  README.html  README.md  about.html  changelog.md  config.env  docker-compose.yml  example.toml  index.html  pyproject.toml  refcard.html  requirements.txt  run-mdwiki  run.py  server.py  setup.py  template.html  vscode.py
docker/: Caddy.Dockerfile  Caddyfile.j2  confgen.py  entrypoint.sh  mwiki-auth.sh  mwiki.Dockerfile  mwiki.sh
docs/: README-Markup-Language.md  README-portuguese.md  changelog.md
mdwiki/: __main__.py  mparser.py  server.py  template.html  utils.py
mdwiki/plugins/: __init__.py  _wiki_image.py  _wiki_link_plugin.py  _wiki_text_highlight_plugin.py  _wikilink_plugin.py
sample-wiki/: Index.md  Internationalization i18n and Localization i10n concepts.md  LaTeX Reference Card.md  Linux SysRq Key and OOM System Recovery.md  Math - Calculus Reference Card.md  Open Source Licenses.md  README.md  about.md  macros.sty  refcard.md
src/mdwiki/: __main__.py  cli.py  mparser.py  server.py  utils.py
src/mdwiki/plugins/: __init__.py  _wiki_text_highlight_plugin.py
src/mwiki/: __main__.py  app.py  cli.py  constants.py  convert.py  export.py  forms.py  latex.py  latex_svg.py  login.py  macros.sty  models.py  mparser.py  refcard.md  render.py  search.py  server.py  template.html  utils.py  watcher.py  wsgi.py
src/mwiki/plugins/: __init__.py  _wiki_citation_plugin.py  _wiki_embed_plugin.py  _wiki_footnotes_plugin.py  _wiki_image.py  _wiki_link_plugin.py  _wiki_mastodon_handle.py  _wiki_tag_plugin.py  _wiki_text_highlight_plugin.py
src/mwiki/static/: editor.js  main.js  static_style.css  style.css
src/mwiki/static/katex/: package-lock.json  package.json
src/mwiki/static/viz/: package-lock.json  package.json
src/mwiki/templates/: about.html  add_user.html  base.html  content.html  create.html  edit.html  licenses.html  links.html  list_users.html  listing.html  login.html  page_menu.html  settings.html  source.html  standalone.html  static.html  tags.html  user_delete.html  user_edit.html  user_settings.html
src_pages/: Internationalization_i18n_and_Localization_i10n_concepts.html  LaTeX_Reference_Card.html  Linux_SysRq_Key_and_OOM_System_Recovery.html  Math_-_Calculus_Reference_Card.html  Open_Source_Licenses.html  Quadratic.html  README.html  about.html  index.html  refcard.html
static/: main.js  static_style.css
tests/: test_ast.py  test_latex.py  test_render.py
