[project]
name = "mdwiki"
version = "0.1"
readme = "README.md"
description = "mdwiki - Markdown Wiki Server for publishing and accessing Github Markdown-Flavor Documents, MyST (from Jupyter Books) documents and  Obsidian Markdown vaults."
requires-python = ">=3.8"
license = { text = "AGPL - GNU Afero" }
## authors = [ (name = "dummy", email = "user@mail") ]
dependencies = [
        # 'flask'
          "flask==3.0.3"
        , "flask-session"
        , "frontmatter"
        # , 'frontmatter==3.0.8"
        , "markdown-it-py==3.0.0"
        , "markdown-it-py[linkif, plugins]"
        , "pygments"
        , "click==8.1.7"
        , "cryptography"
        , "tomli"
]


[tool.setuptools.packages.find]
where = ["./src"]
include = ["mdwiki", "mdwiki.plugins"]
exclude = ["**__pycache__**"]

# Package data from all directories and sub-directories
[tool.setuptools.package-data]
"*" = [ "*.html", "*.css", "*.js" ]



[tool.poetry]
name = "mdwiki"
version = "0.1.0"
description = "mdwiki - Markdown Wiki Server for publishing and accessing Github Markdown-Flavor Documents, MyST (from Jupyter Books) documents and  Obsidian Markdown vaults."
packages = [{include = "mdwiki", from = "src"} ]
authors = [ "Caio Rodrigues"]
readme = "README.md"
keywords  = ["wiki", "myst", "markdown", "markdup", "obsidian"]

[tool.poetry.scripts]
mdwiki = "mdwiki.cli:main"
## run    = "mdwiki.cli:main"

[tool.poetry.dependencies]
python = ">=3.8"
flask  = "3.0.3"
flask-session = "*"
frontmatter = "*"
#  , 'frontmatter==3.0.8'
markdown-it-py = "^3.0.0"
## "markdown-it-py[linkify, plugins]" = "*"
linkify-it-py = "*"
mdit-py-plugins = "*"
pygments = "*"
click = "^8.1.7"
cryptography = "*"
tomli = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"